# led-pixel-wall

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  WLED.md  ddp-functional.md  sdkconfig  sdkconfig.defaults  wi-fi.md
client-examples/: .env.example  effects.py  generate_weather_backgrounds.py  render_png.py  sample-ddp-client.py  system_status.py  trail_status.py  viewer_template.html  weather-backgrounds.md  weather.py
client-examples/trailstatuslib/: __init__.py  tmtb.py
client-examples/wallclient/: __init__.py  color.py  config.py  ddp.py  panel.py
client-examples/weatherlib/: backgrounds.py  display_assets.py  noaa.py  sun.py
experiments/: README.md  audio_viz.py  bluetooth-test.c  wifi-test.c
main/: CMakeLists.txt  app.c  controller_config.c  controller_config.h  ddp_server.c  ddp_server.h  effect_registry.c  effect_registry.h  effects.c  effects.h  effects_cylon.c  effects_cylon.h  effects_fast_blink.c  effects_fast_blink.h  effects_pattern.c  effects_pattern.h  effects_random_breathe.c  effects_random_breathe.h  effects_static_on.c  effects_static_on.h  led-pixel-wall.c  led_driver.c  led_driver.h  segment.c  segment.h  status_indicator.c  status_indicator.h  wifi_provisioning.c  wifi_provisioning.h
server-examples/: effects.py  generate_weather_backgrounds.py  render_png.py  sample-ddp-client.py  temperature.py  weather.py
server-examples/weatherlib/: ddp.py
