idf_component_register(
    SRCS
        "app.c"
        "controller_config.c"
        "ddp_server.c"
        "led_driver.c"
        "status_indicator.c"
        "wifi_provisioning.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        led_strip
        esp_wifi
        esp_event
        esp_http_server
        esp_netif
        nvs_flash
        esp_timer
)
